--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,7 +11,9 @@
     "com.unity.inputsystem": "1.7.0",
     "com.unity.learn.iet-framework": "3.1.3",
     "com.unity.learn.iet-framework.authoring": "1.2.2",
+    "com.unity.memoryprofiler": "1.0.0",
     "com.unity.render-pipelines.universal": "14.0.8",
+    "com.unity.shadergraph": "14.0.8",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
@@ -22,6 +24,7 @@
     "com.unity.xr.management": "4.4.0",
     "com.unity.xr.meta-openxr": "0.2.1",
     "com.unity.xr.openxr": "1.8.2",
+    "jp.co.cyberagent.nova": "https://github.com/CyberAgentGameEntertainment/NovaShader.git?path=/Assets/Nova",
     "org.mixedrealitytoolkit.accessibility": "file:MixedReality/org.mixedrealitytoolkit.accessibility-1.0.0-pre.18.tgz",
     "org.mixedrealitytoolkit.audio": "file:MixedReality/org.mixedrealitytoolkit.audio-3.0.0.tgz",
     "org.mixedrealitytoolkit.core": "file:MixedReality/org.mixedrealitytoolkit.core-3.0.1.tgz",
